vortex-btrblocks/tests/snapshots/golden__regular__int_sparse_outliers.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: i64, len=16384, nbytes=131072
root: vortex.sparse(i64, len=16384) nbytes=5546
  metadata: fill_value: 1000000i64
  patch_indices: vortex.primitive(u16, len=848) nbytes=1696
    metadata: ptype: u16
  patch_values: fastlanes.for(i64, len=848) nbytes=3846
    metadata: offset: 0
    encoded: fastlanes.bitpacked(i64, len=848) nbytes=3840
      metadata: bit_width: 30, offset: 0
    references: vortex.constant(i64, len=1) nbytes=6
      metadata: scalar: 1000830099i64
