vortex-btrblocks/tests/snapshots/golden__regular__list_of_int_runs.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: list(i32), len=4066, nbytes=81804
root: vortex.list(list(i32), len=4066) nbytes=11152
  metadata: 
  elements: vortex.runend(i32, len=16384) nbytes=3974
    metadata: offset: 0
    ends: fastlanes.for(u16, len=1020) nbytes=1794
      metadata: offset: 0
      encoded: fastlanes.bitpacked(u16, len=1020) nbytes=1792
        metadata: bit_width: 14, offset: 0
      references: vortex.constant(u16, len=1) nbytes=2
        metadata: scalar: 13u16
    values: fastlanes.for(i32, len=1020) nbytes=2180
      metadata: offset: 0
      encoded: fastlanes.bitpacked(i32, len=1020) nbytes=2176
        metadata: bit_width: 17, offset: 0
      references: vortex.constant(i32, len=1) nbytes=4
        metadata: scalar: -49931i32
  offsets: fastlanes.bitpacked(u16, len=4067) nbytes=7178
    metadata: bit_width: 14, offset: 0
    patch_indices: vortex.primitive(u16, len=1) nbytes=2
      metadata: ptype: u16
    patch_values: vortex.constant(u16, len=1) nbytes=4
      metadata: scalar: 16384u16
    patch_chunk_offsets: vortex.primitive(u8, len=4) nbytes=4
      metadata: ptype: u8
