vortex-btrblocks/tests/snapshots/golden__regular__temporal_timestamp_micros.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: vortex.timestamp[µs, tz=UTC](i64), len=16384, nbytes=131072
root: vortex.ext(vortex.timestamp[µs, tz=UTC](i64), len=16384) nbytes=67593
  metadata: 
  storage: fastlanes.for(i64, len=16384) nbytes=67593
    metadata: offset: 0
    encoded: fastlanes.bitpacked(i64, len=16384) nbytes=67584
      metadata: bit_width: 33, offset: 0
    references: vortex.constant(i64, len=16) nbytes=9
      metadata: scalar: 1700000000891673i64
